Mobile view - text align fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,6 +318,7 @@ h1, h2, h3, h4, h5, h6 {
   #hero h1 {
     font-size: 32px;
     line-height: 36px;
+    text-align: center;
   }
   #hero p {
     margin-top: 10px;
